--- a/timer.html
+++ b/timer.html
@@ -5,4 +5,7 @@
     <input class="button" id="startstopbutton" type="button" value="Start/Stop" onClick="startstop()"><br>
 	<input class="button" id="marklapbutton" type="button" value="Split/Mark Lap" onClick="marklap()" ><br>
 	<input class="button" id="resetbutton" type="button" value="Reset Stopwatch" onClick="reset()"><br>
-	<textarea class="lap" id="lapdetails"></textarea>
+    <textarea class="lap" id="lapdetails"></textarea>
+
+    Time:<br>
+    <input type="number" id="time" value=0 min=0 max=999><br>
