--- a/timer.html
+++ b/timer.html
@@ -1,5 +1,5 @@
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-<script type="text/javascript" src="timer.js"></script> 
+<script type="text/javascript" src="js/timer.js"></script> 
 
 <input class="timer" id="timer" type="text" value="0:0:0" ><br>
     <input class="button" id="startstopbutton" type="button" value="Start/Stop" onClick="startstop()"><br>
